--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://parampatil.github.io/your-repo-name",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean:dist": "npm run rimraf -- build/dist",
