--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://parampatil.github.io/your-repo-name",
+  "homepage": "https://parampatil.github.io/geohashmap",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean:dist": "npm run rimraf -- build/dist",
@@ -11,11 +11,14 @@
     "build:dev": "npm run clean:dist && npm run webpack -- --mode development --progress",
     "build:prod": "npm run clean:dist && npm run webpack -- --mode=production --config webpack.prod.js",
     "analys:prod": "npm run webpack -- --mode=production --config webpack.prod.js --profile --json > profile.json",
+    "predeploy": "npm run build:prod",
+"deploy": "gh-pages -d build/dist",
     "start": "npm run start:dev",
     "start:dev": "npm run webpack-dev-server -- --mode development --open --progress --watch",
     "rimraf": "rimraf",
     "webpack": "webpack",
-    "webpack-dev-server": "webpack-dev-server"
+    "webpack-dev-server": "webpack-dev-server",
+
   },
   "author": "Alexander Berezovsky",
   "license": "MIT",
@@ -26,6 +29,7 @@
     "@types/react-router-dom": "^4.3.1",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
+    "gh-pages": "^6.3.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
